munin (work)

  * Bugfix: munin-limits should log less noise.
  * Bugfix: munin-limits did not notify correctly in all situations.
  * Bugfix: munin-graph now treats CDEFs in fields with long names properly.
  * Bugfix: munin-graph now logs an illegal STACK in the first field better
    (SF#1081903).
  * Munin-run: Now behaves properly when running invalid plugins (SF#1074242).
  * Plugin: New version of generic/smart_ by plugin creator (Nicolas
    Stransky) (SF#1072459).
  * Plugin: generic/uptime was re-classified as linux/uptime (SF#1074576).
  * Plugin: Renamed generic/folding@home to generic/foldingathome (SF#1074241).
  * Plugin: Modify generic/ping_ so it's compatible with Solaris ping
    (SF#1074545).
  * Plugin: Fixed broken autoconf in generic/sendmail_mailtraffic (SF#1074528).
  * Plugin: Patched sunos/cpu to work on Solaris 9 (SF#1077899).
  * Plugin: Major improvements to sunos/io_ops,bytes,busy, by Lupe Christoph
    (SF#1077898).
  * Plugin: Portability enhancementes to sunos/fs_df (SF#1077903).
  * Plugin: linux/fw_forwarded_local now initialises properly (Deb#284673).
  * Plugin: Added more sensible autoconf to generic/sybase_space.
  * Plugin: Added more sensible autoconf to generic/munin_graph,munin_update.

munin (1.1.7)

  * Allow floating point values in warning/critical limits.
  * Bugfix in munin-html, when using groups/host names with more than one dot.
  * Updated RPM package creation with regards to the 1.2 series.
  * Created RPM package creation for SuSE with regards to the 1.2 series.
  * Added --stdout-option to all programs (SF#1073148).
  * Log updates of nonexisting fields better (SF#1073172).
  * Force plugin linux/apt to use C locale (SF#1072470).

munin (1.1.6)

  * Failsafe entry for @@PYTHON@@.
  * Bugfix in munin-limits (it didn't work properly).
  * Added separate makefile target to take care of SNMP-only items.

munin (1.1.5)

  - Munin main package: